Adding index.html and initial styles sheet.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>watson.</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Section -->
+    <header class="header-container">
+        <div class="header-logo">
+            <a href="https://example.com">Header Logo</a>
+
+            <nav>
+                <ul class="header-links">
+                    <li><a href="https://example.com">Link 1</a></li>
+                    <li><a href="https://example.com">Link 2</a></li>
+                    <li><a href="https://example.com">Link 3</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <section class ="first-section">
+            <section class="intro">
+                <h1>Looking for your next gig? Look no further</h1>
+                <p>Get the business you deserve.</p>
+                <button>Get watson now.</button>
+            </section>
     
+            <section class="image-placeholder">
+                <p>This is an image placeholder.</p>
+            </section>
+        </section>
+
+        <section class="features">
+            <h1>Host your gig on Watson. Get customers.</h1>
+            <ul class="features-list">
+                <li>Feature 1</li>
+                <li>Feature 2</li>
+                <li>Feature 3</li>
+            </ul>
+        </section>
+
+        <section class="quote">
+            <h1>To be seen you must be visible.</h1>
+        </section>
+
+        <section class ="fourth-section">
+            <section class="call-to-action">
+                <h1>Get seen now.</h1>
+                <button>Join now.</button>
+            </section>
+        </section>
+
+    </main>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 Watson. All rights reserved.</p>
+    </footer>
 </body>
 </html>
