First section done

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>watson.</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
     <!-- Header Section -->
     <header class="header-container">
-        <div class="header-logo">
-            <a href="https://example.com">Header Logo</a>
+            <a href="https://example.com" class="header-logo">watson.</a>
 
-            <nav>
-                <ul class="header-links">
+            <nav class="header-links">
+                <ul>
                     <li><a href="https://example.com">Link 1</a></li>
                     <li><a href="https://example.com">Link 2</a></li>
                     <li><a href="https://example.com">Link 3</a></li>
                 </ul>
             </nav>
-        </div>
     </header>
 
     <!-- Main Content -->
@@ -27,7 +27,7 @@
         <section class ="first-section">
             <section class="intro">
                 <h1>Looking for your next gig? Look no further</h1>
-                <p>Get the business you deserve.</p>
+                <h2>Get the business you deserve.</h2>
                 <button>Get watson now.</button>
             </section>
     
