Adding feature description.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,36 @@
         <section class="features">
             <h1>Host your gig on Watson. Get customers.</h1>
             <ul class="features-list">
-                <li>Feature 1</li>
-                <li>Feature 2</li>
-                <li>Feature 3</li>
+                <li>
+                    <div class="rounded-box-container">
+                        <div class="rounded-box">
+                            <img src="https://via.placeholder.com/150" alt="Feature Image">
+                        </div>
+                        <div class="rounded-box-subscript">
+                            <p>Feature 1 description goes here. This is a brief overview of the feature.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="rounded-box-container">
+                        <div class="rounded-box">
+                            <img src="https://via.placeholder.com/150" alt="Feature Image">
+                        </div>
+                        <div class="rounded-box-subscript">
+                            <p>Feature 2 description goes here. This is a brief overview of the feature.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="rounded-box-container">
+                        <div class="rounded-box">
+                            <img src="https://via.placeholder.com/150" alt="Feature Image">
+                        </div>
+                        <div class="rounded-box-subscript">
+                            <p>Feature 3 description goes here. This is a brief overview of the feature.</p>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </section>
 
