Adding the rest of the sections

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 
         <section class="features">
-            <h1>Host your gig on Watson. Get customers.</h1>
+            <h1>Host your gig on watson. Get customers.</h1>
             <ul class="features-list">
                 <li>
                     <div class="rounded-box-container">
@@ -72,13 +72,17 @@
             </ul>
         </section>
 
-        <section class="quote">
-            <h1>To be seen you must be visible.</h1>
+        <section class="quote-section">
+            <h1 class="quote">"It's not about ideas. It's about making ideas happen." </h1>
+            <p class = "quote-author">- Scott Belsky</p>
         </section>
 
         <section class ="fourth-section">
             <section class="call-to-action">
-                <h1>Get seen now.</h1>
+                <div>
+                    <h1>Grow your business now.</h1>
+                    <p>Your dream gig is only a few clicks away.</p>
+                </div>
                 <button>Join now.</button>
             </section>
         </section>
