--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>watson.</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,30 +43,30 @@
                 <li>
                     <div class="rounded-box-container">
                         <div class="rounded-box">
-                            <img src="https://via.placeholder.com/150" alt="Feature Image">
+                            <i class="fas fa-rocket"></i> <!-- Example icon -->
                         </div>
                         <div class="rounded-box-subscript">
-                            <p>Feature 1 description goes here. This is a brief overview of the feature.</p>
+                            <p>Get your sales to the moon.</p>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="rounded-box-container">
                         <div class="rounded-box">
-                            <img src="https://via.placeholder.com/150" alt="Feature Image">
+                            <i class="fas fa-cogs"></i> <!-- Example icon -->
                         </div>
                         <div class="rounded-box-subscript">
-                            <p>Feature 2 description goes here. This is a brief overview of the feature.</p>
+                            <p>Understand your pipeline.</p>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="rounded-box-container">
                         <div class="rounded-box">
-                            <img src="https://via.placeholder.com/150" alt="Feature Image">
+                            <i class="fas fa-chart-line"></i> <!-- Example icon -->
                         </div>
                         <div class="rounded-box-subscript">
-                            <p>Feature 3 description goes here. This is a brief overview of the feature.</p>
+                            <p>Grow your business.</p>
                         </div>
                     </div>
                 </li>
